--- a/src/client/my-app/src/App.css
+++ b/src/client/my-app/src/App.css
@@ -1,38 +1,74 @@
 .App {
-  text-align: center;
+  margin-top: 10px;
+  margin-left: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.button:last-child {
+  margin-right: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.button-default {
+  background-color: #007bff;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.button-success {
+  background-color: #28a745;
+}
+
+.button-danger {
+  background-color: #dc3545;
+}
+
+.button-secondary {
+  background-color: #6c757d;
+}
+
+.button {
+  cursor: pointer;
+  border: 1px;
   color: white;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-right: 3px;
 }
 
-.App-link {
-  color: #61dafb;
+table, th, td {
+  padding: 3px;
+  border: 1px solid black;
+  border-collapse: collapse;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input {
+  padding: 3px;
+}
+
+.mb-3 {
+  margin-bottom: 3px;
+}
+
+.mr-3 {
+  margin-right: 3px;
+}
+
+.modal {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%;
 }
