--- a/src/client/my-app/src/App.css
+++ b/src/client/my-app/src/App.css
@@ -35,7 +35,9 @@
   margin-right: 3px;
 }
 
-table, th, td {
+table,
+th,
+td {
   padding: 3px;
   border: 1px solid black;
   border-collapse: collapse;
@@ -61,8 +63,8 @@ input {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-content {
